--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<body style="margin:0px">
-		<audio autoplay loop>
-			<source src="music/music.mp3" type="audio/mpeg">
+		<audio autoplay loop id="playAudio">
+			<source src="./music/music.mp3" type="audio/mpeg">
 			Your browser does not support the audio.
 		</audio>
 		<canvas></canvas>
